package model;

public enum EtatRendezVous {

    PLANIFIE,
    TERMINE,
    ANNULE
}
