package model;

public enum StatutDossier {

    ACTIF,
    FERME,
    EN_SUIVI
}

 